Add search toolbar

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+
     <color name="primary">#607D8B</color>
     <color name="primary_dark">#455A64</color>
     <color name="primary_light">#CFD8DC</color>
@@ -14,4 +19,11 @@
     <color name="news_desk_art">#E74C3C</color>
     <color name="news_desk_sports">#28B463</color>
     <color name="news_desk_fashion">#F1C40F</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="grey">#A6ACAF</color>
+    <color name="golden_yellow">#FFE000</color>
+    <color name="lightGrey">#E5E7E9</color>
+    <color name="backgorund_green">#5DBCD2</color>
 </resources>
