Web View activity UI

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,25 @@
     tools:context="com.example.gkudva.android_nytimes_client.view.activity.MainActivity"
     android:background="@color/black">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/rlProgress"
+        android:gravity="center">
+
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:gravity = "center_vertical|center_horizontal"
+            android:visibility="gone"
+            android:scaleX="2"
+            android:scaleY="2"/>
+    </RelativeLayout>
+
     <include layout="@layout/layout_toolbar"
         android:id="@+id/list_toolbar"
         android:layout_width="match_parent"
@@ -17,6 +36,12 @@
         android:layout_alignParentStart="true"
         />
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/list_toolbar">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvNews"
@@ -28,6 +53,6 @@
         android:padding="16dp"
         android:clipToPadding="false"
         />
-
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
