--- a/app/src/main/res/layout/fragment_search_filters.xml
+++ b/app/src/main/res/layout/fragment_search_filters.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/activity_horizontal_margin">
+    android:padding="@dimen/activity_horizontal_margin"
+    android:background="@color/white">
 
     <LinearLayout
         android:id="@+id/llDate"
@@ -108,12 +109,26 @@
         </LinearLayout>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/llbtn"
+        android:layout_below="@+id/llNews"
+        android:orientation="horizontal"
+        android:paddingTop="50dp">
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Save All"
+        android:text="@string/search"
         android:id="@+id/btnSave"
-        android:layout_below="@+id/llNews"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="45dp" />
+        android:layout_weight="1"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/cancel"
+            android:id="@+id/btnCancel"
+            android:layout_weight="1"/>
+    </LinearLayout>
+
 </RelativeLayout>
