--- a/app/src/main/res/layout/fragment_search_filters.xml
+++ b/app/src/main/res/layout/fragment_search_filters.xml
@@ -121,14 +121,9 @@
         android:layout_height="wrap_content"
         android:text="@string/search"
         android:id="@+id/btnSave"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:background="@color/primary_light"/>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/cancel"
-            android:id="@+id/btnCancel"
-            android:layout_weight="1"/>
     </LinearLayout>
 
 </RelativeLayout>
